# aucont

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile1  Dockerfile3  README.md
task_stuff/rootfs/dev/: fill.sh
task_stuff/rootfs/etc/: inittab  os-release
task_stuff/rootfs/lib/: libgcc_s.so.1
task_stuff/rootfs/sbin/: bridge  genl  ifstat  ip  ldconfig  lnstat  nstat  rtacct  rtmon  ss  tc
task_stuff/rootfs/test/busyloop/src/: run.sh  test.cpp
task_stuff/rootfs/test/fs/: test.sh
task_stuff/rootfs/test/hello/: hello
task_stuff/rootfs/test/interactive/src/: test.cpp
task_stuff/rootfs/test/kmodule/: module.ko
task_stuff/rootfs/test/kmodule/src/: test.cpp
task_stuff/rootfs/test/net/: test.sh
task_stuff/rootfs/test/web/: .gitignore  file.txt  server.sh
task_stuff/rootfs/usr/lib/: libip4tc.so.0.1.0  libiptc.so.0.0.0  libxtables.so.10.0.0
task_stuff/rootfs/usr/sbin/: xtables-multi
task_stuff/scripts/: run_test.sh  test.py
tools/: CMakeLists.txt  build.sh
tools/src/: aucont_exec.cpp  aucont_list.cpp  aucont_start.cpp  aucont_stop.cpp  main.cpp  util.cpp  util.h
tools/src/include/: util.h
